templates/syft_template.yaml
---
# Source: syft/templates/backend/backend-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-headless
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: backend
  clusterIP: None
  ports:
    - name: api
      port: 80
---
# Source: syft/templates/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: backend
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80
    - name: queue
      protocol: TCP
      port: 5556
      targetPort: 5556
---
# Source: syft/templates/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: frontend
  ports:
    - name: ui
      protocol: TCP
      port: 80
      targetPort: 80
---
# Source: syft/templates/mongo/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: mongo
spec:
  clusterIP: None
  ports:
    - name: mongo
      port: 27017
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: mongo
---
# Source: syft/templates/mongo/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: mongo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: mongo
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
---
# Source: syft/templates/proxy/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: proxy
  ports:
    - name: proxy
      protocol: TCP
      port: 80
      targetPort: 80
---
# Source: syft/templates/registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: registry
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: registry
  ports:
  - name: registry
    protocol: TCP
    port: 80
    targetPort: 5000
---
# Source: syft/templates/seaweedfs/seaweedfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: seaweedfs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syft
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: seaweedfs
  ports:
    - name: filer
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: s3
      protocol: TCP
      port: 8333
      targetPort: 8333
    - name: mount-api
      protocol: TCP
      port: 4001
      targetPort: 4001
---
# Source: syft/templates/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend-container
          image: docker.io/openmined/grid-frontend:0.8.6
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 512Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          ports:
            - name: ui-port
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health?probe=startupProbe
              port: ui-port
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      terminationGracePeriodSeconds: 5
---
# Source: syft/templates/proxy/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: proxy
    spec:
      containers:
        - name: proxy-container
          image: traefik:v2.11
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: proxy-port
              containerPort: 80
            - name: ping-port
              containerPort: 8082
          volumeMounts:
            - mountPath: /etc/traefik
              name: traefik-conf
              readOnly: false
          startupProbe: null
          livenessProbe:
            httpGet:
              path: /ping?probe=livenessProbe
              port: ping-port
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: null
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          name: proxy-config
        name: traefik-conf
---
# Source: syft/templates/backend/backend-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: backend
  serviceName: backend-headless
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend-container
          image: docker.io/openmined/grid-backend:0.8.6
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1.0"
              ephemeral-storage: 1Gi
              memory: 1Gi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          ports:
            - name: api-port
              containerPort: 80
          volumeMounts:
            - mountPath: /root/data/creds/
              name: credentials-data
              readOnly: false
              subPath: credentials-data
          startupProbe:
            httpGet:
              path: /api/v2/metadata?probe=startupProbe
              port: api-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v2/?probe=livenessProbe
              port: api-port
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: null
      serviceAccountName: backend-service-account
      terminationGracePeriodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: credentials-data
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: backend
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Mi
---
# Source: syft/templates/mongo/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: mongo
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: mongo
  serviceName: mongo-headless
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: mongo
    spec:
      containers:
        - name: mongo-container
          image: mongo:7
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
              readOnly: false
              subPath: ''
          ports:
            - name: mongo-port
              containerPort: 27017
      terminationGracePeriodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongo
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
---
# Source: syft/templates/registry/registry-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: registry
spec:
  replicas: 1
  serviceName: registry
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: registry
    spec:
      containers:
        - name: registry-container
          image: registry:2
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: registry-port
              containerPort: 5000
          volumeMounts:
            - mountPath: /var/lib/registry
              name: registry-data
          startupProbe:
            httpGet:
              path: /v2/?probe=startupProbe
              port: registry-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v2/?probe=livenessProbe
              port: registry-port
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      terminationGracePeriodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: registry-data
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: registry
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
---
# Source: syft/templates/seaweedfs/seaweedfs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seaweedfs
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: seaweedfs
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: syft
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: seaweedfs
  serviceName: seaweedfs
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/version: 0.8.6
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: syft-0.8.6
        app.kubernetes.io/component: seaweedfs
    spec:
      containers:
        - name: seaweedfs-container
          image: docker.io/openmined/grid-seaweedfs:0.8.6
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - mountPath: /etc/seaweedfs/filer.toml
              name: seaweedfs-config
              readOnly: false
              subPath: filer.toml
            - mountPath: /etc/seaweedfs/start.sh
              name: seaweedfs-config
              readOnly: false
              subPath: start.sh
            - mountPath: /data/blob
              name: seaweedfs-data
              readOnly: false
              subPath: ''
      terminationGracePeriodSeconds: 5
      volumes:
        - configMap:
            name: seaweedfs-config
          name: seaweedfs-config
  volumeClaimTemplates:
  - metadata:
      name: seaweedfs-data
      labels:
        app.kubernetes.io/name: syft
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: seaweedfs
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
---
# Source: syft/templates/global/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: syft
    app.kubernetes.io/version: 0.8.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: syft-0.8.6
    app.kubernetes.io/component: ingress
spec:
  defaultBackend:
    service:
      name: proxy
      port:
        number: 80
  rules:
  - host: 
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 80
        path: /
        pathType: Prefix
